# Haskell-Boilerpipe-Wrapper

./: .gitignore  Boilerpipe.cabal
Text/HTML/: Boilerpipe.hs
boilerpipe-core/: .classpath  build.xml
boilerpipe-core/src/cmd/com/thoughtleadr/boilerpipe/: boilerpipe.java
