Name:                Boilerpipe
Version:             0.4.1
License:             BSD3
License-file:        LICENSE
Author:              Ryan Burton
Maintainer:          Kostiantyn Rybnikov <konstantine@thoughtleadr.com>
Category:            Text
Build-type:          Simple
Cabal-version:       >=1.10
Data-Files: boilerpipe-core/dist/boilerpipe-1.2-dev.jar,
            boilerpipe-core/lib/nekohtml-1.9.13.jar,
            boilerpipe-core/lib/xerces-2.9.1.jar
Library
  Exposed-modules:     Text.HTML.Boilerpipe
  Build-depends: base, 
                 filepath, 
                 process, 
                 strict, 
                 system-uuid, 
                 temporary
  Other-modules: Paths_Boilerpipe
